# oyasumivr_oscquery

./: Cargo.toml  LICENSE  README.md  build.sh
examples/: custom_server.rs  simple_client.rs  simple_server.rs  test.rs
examples/osc_server/: mod.rs
src/: client.rs  lib.rs  mdns_sidecar.rs  models.rs  server.rs
src-mdns-sidecar/: Program.cs  app.manifest  mdns-sidecar.csproj
src-mdns-sidecar/Zeroconf/: MeaModDiscovery.cs
