[package]
name = "oyasumivr_oscquery"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
mdns-sd = { git = "https://github.com/Raphiiko/vrc-mdns-sd.git" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
hyper = { version = "1.0.1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
rosc = "0.10.1"
