[package]
name = "oyasumivr_oscquery"
description = "Limited OSCQuery implementation in Rust for use with VRChat, for OyasumiVR."
version = "0.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Raphiiko/oyasumivr_oscquery"
repository = "https://github.com/Raphiiko/oyasumivr_oscquery"
readme = "README.md"
keywords = ["gamedev", "vrchat", "osc", "oscquery", "oyasumivr"]
categories = [
    "game-development",
    "network-programming",
    "web-programming::http-server",
]

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
mdns-sd = { git = "https://github.com/Raphiiko/vrc-mdns-sd.git" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
hyper = { version = "1.0.1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
local-ip-address = "0.5.6"

[dev-dependencies]
rosc = "0.10.1"
