[package]
name = "oyasumivr_oscquery"
description = "Limited OSCQuery implementation in Rust for use with VRChat, for OyasumiVR."
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Raphiiko/oyasumivr_oscquery"
repository = "https://github.com/Raphiiko/oyasumivr_oscquery"
readme = "README.md"
keywords = ["gamedev", "vrchat", "osc", "oscquery", "oyasumivr"]
categories = [
    "game-development",
    "network-programming",
    "web-programming::http-server",
]

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.133"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.22"

[dev-dependencies]
rosc = "0.10.1"
env_logger = "0.11.5"
